--- a/Economy.html
+++ b/Economy.html
@@ -48,7 +48,7 @@
               <li>Groundnut – Commonly grown during Kharif</li>
               <li>Cotton – Grown occasionally due to price fluctuations</li>
             </ul>
-            <img src="styles/images/farming.png" alt="Farming in Kumbhan" />
+            <img src="public/images/farming.png" alt="Farming in Kumbhan" />
           </div>
 
           <!-- Trade & Small Businesses Card -->
@@ -66,7 +66,7 @@
               <li>Mobile repair and hardware shops</li>
             </ul>
             <img
-              src="styles/images/grocessory.png"
+              src="public/images/grocessory.png"
               alt="Grocery shop in village"
             />
           </div>
@@ -85,7 +85,7 @@
               <li>Mostly male workers</li>
               <li>Weekly commute or seasonal migration</li>
             </ul>
-            <img src="styles/images/diomond.png" alt="Diamond work in Mahuva" />
+            <img src="public/images/diomond.png" alt="Diamond work in Mahuva" />
           </div>
 
           <!-- Other Occupations Card -->
@@ -103,7 +103,7 @@
               <li>Women’s cottage industries</li>
             </ul>
             <img
-              src="styles/images/otheroccu.png"
+              src="public/images/otheroccu.png"
               alt="Diamond work in Mahuva"
             />
           </div>
@@ -122,7 +122,7 @@
               <li>Debt due to farming expenses</li>
               <li>Limited irrigation in some areas</li>
             </ul>
-            <img src="styles/images/fp.png" alt="Diamond work in Mahuva" />
+            <img src="public/images/fp.png" alt="Diamond work in Mahuva" />
           </div>
 
           <!-- Women's Role Card -->
@@ -138,7 +138,7 @@
               <li>Sewing and embroidery</li>
               <li>Homemade snacks, pickles, and papads</li>
             </ul>
-            <img src="styles/images/wE.png" alt="Diamond work in Mahuva" />
+            <img src="public/images/wE.png" alt="Diamond work in Mahuva" />
           </div>
         </div>
       </section>
