--- a/education.html
+++ b/education.html
@@ -41,7 +41,7 @@
             <!-- School 1 -->
             <article class="temple-card">
               <figure class="temple-image">
-                <img src="styles/images/kanya.png" alt="Primary School 1" />
+                <img src="public/images/kanya.png" alt="Primary School 1" />
               </figure>
               <div class="temple-info">
                 <h3>Kumbhan girls Primary School</h3>
@@ -58,7 +58,7 @@
             <!-- School 2 -->
             <article class="temple-card">
               <figure class="temple-image">
-                <img src="styles/images/boyss.jpg" alt="Primary School 2" />
+                <img src="public/images/boyss.jpg" alt="Primary School 2" />
               </figure>
               <div class="temple-info">
                 <h3>Kumbhan boys Primary School</h3>
@@ -74,7 +74,7 @@
             <article class="temple-card">
               <figure class="temple-image">
                 <img
-                  src="styles/images/s.v.doshi.jpg"
+                  src="public/images/s.v.doshi.jpg"
                   alt="Higher Secondary School 1"
                 />
               </figure>
@@ -92,7 +92,7 @@
             <article class="temple-card">
               <figure class="temple-image">
                 <img
-                  src="styles/images/rmsa.png"
+                  src="public/images/rmsa.png"
                   alt="Higher Secondary School 2"
                 />
               </figure>
