--- a/festivals.html
+++ b/festivals.html
@@ -57,7 +57,7 @@
         <h3>🐘 Ganesh Chaturthi</h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/ganesh-chaturthi.jpg"
+            src="public/images/ganesh-chaturthi.jpg"
             alt="Ganesh idol immersion procession"
             style="
               float: right;
@@ -82,7 +82,7 @@
         <h3>🌼 Janmashtami </h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/janmasmi.png"
+            src="public/images/janmasmi.png"
             alt="Children celebrating Janmashtami with Dahi Handi"
             style="
               float: right;
@@ -110,7 +110,7 @@
         <h3>💃 Navratri </h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/navratri.png"
+            src="public/images/navratri.png"
             alt="Garba celebration during Navratri"
             style="
               float: right;
@@ -137,7 +137,7 @@
         <h3>✨ Diwali </h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/diwali.png"
+            src="public/images/diwali.png"
             alt="Diwali diyas and rangoli"
             style="
               float: right;
@@ -161,7 +161,7 @@
         <h3>🎇 Gujarati New Year (Bestu Varas)</h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/new-year.jpg"
+            src="public/images/new-year.jpg"
             alt="Gujarati New Year celebrations"
             style="
               float: right;
@@ -184,7 +184,7 @@
         <h3>🔱 Kumbhanath Mahadev Festival</h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/kumbhnath.png"
+            src="public/images/kumbhnath.png"
             alt="Kumbhanath Mahadev Festival"
             style="
               float: right;
@@ -206,7 +206,7 @@
         <h3>🪁 Makar Sankranti / Uttarayan (14 Jan)</h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/makarsankranti.png"
+            src="public/images/makarsankranti.png"
             alt="Makar Sankranti kite flying"
             style="
               float: right;
@@ -228,7 +228,7 @@
         <h3>🔥 Holi&nbsp;&amp;&nbsp;Dhuleti</h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/dhuleti.webp"
+            src="public/images/dhuleti.webp"
             alt="Holi festival with colors and celebration"
             style="
               float: right;
@@ -250,7 +250,7 @@
         <h3>🕉️ Maha Shivaratri</h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/shivling.avif"
+            src="public/images/shivling.avif"
             alt="Devotees at Shiva temple on Maha Shivaratri"
             style="
               float: right;
@@ -271,7 +271,7 @@
         <h3>🌙 Eid Celebration</h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/eid.jpg"
+            src="public/images/eid.jpg"
             alt="Community gathering for Eid prayers in Kumbhan"
             style="
               float: right;
@@ -296,7 +296,7 @@
         <h3>🎓 School Praveshotsav </h3>
         <div style="overflow: hidden">
           <img
-            src="styles/images/praveshuttsav.png"
+            src="public/images/praveshuttsav.png"
             alt="Welcoming students during School Praveshotsav"
             style="
               float: right;
