--- a/temples.html
+++ b/temples.html
@@ -36,7 +36,7 @@
         <article class="temple-card">
           <figure class="temple-image">
             <img
-              src="styles/images/kumbhnath.png"
+              src="public/images/kumbhnath.png"
               alt="Kumbhnath Mahadev Mandir"
             />
           </figure>
@@ -60,7 +60,7 @@
         <!-- 2. Jahal Ma Mandir -->
         <article class="temple-card">
           <figure class="temple-image">
-            <img src="styles/images/jahalma.png" alt="Jahal Ma Mandir" />
+            <img src="public/images/jahalma.png" alt="Jahal Ma Mandir" />
           </figure>
           <div class="temple-info">
             <h3>Jahal Ma Mandir</h3>
@@ -81,7 +81,7 @@
         <!-- 3. Bapa Sitaram Mandir -->
         <article class="temple-card">
           <figure class="temple-image">
-            <img src="styles/images/bapa.jpg" alt="Bapa Sitaram Mandir" />
+            <img src="public/images/bapa.jpg" alt="Bapa Sitaram Mandir" />
           </figure>
           <div class="temple-info">
             <h3>Bapa Sitaram Mandir</h3>
@@ -102,7 +102,7 @@
         <!-- 4. Ramji Mandir -->
         <article class="temple-card">
           <figure class="temple-image">
-            <img src="styles/images/ramji.png" alt="Ramji Mandir" />
+            <img src="public/images/ramji.png" alt="Ramji Mandir" />
           </figure>
           <div class="temple-info">
             <h3>Ramji Mandir</h3>
@@ -121,7 +121,7 @@
         <article class="temple-card">
           <figure class="temple-image">
             <img
-              src="styles/images/ramapir.png"
+              src="public/images/ramapir.png"
               alt="Shree Ramdevpir Bapa Temple"
             />
           </figure>
@@ -143,7 +143,7 @@
 
         <article class="temple-card">
           <figure class="temple-image">
-            <img src="styles/images/majid.png" alt="Masjid-e-Noor" />
+            <img src="public/images/majid.png" alt="Masjid-e-Noor" />
           </figure>
           <div class="temple-info">
             <h3>Masjid-e-Noor</h3>
