--- a/Healthcare.html
+++ b/Healthcare.html
@@ -38,7 +38,7 @@
             style="aspect-ratio: 4/3; max-width: 480px"
           >
             <img
-              src="styles/images/gh.png"
+              src="public/images/gh.png"
               alt="Government Hospital, Kumbhan"
             />
           </figure>
