--- a/culture.html
+++ b/culture.html
@@ -61,7 +61,7 @@
             </div>
             <div class="image">
               <img
-                src="styles/images/Kumbhan’s Vibrant Wardrobe.png"
+                src="public/images/Kumbhan’s Vibrant Wardrobe.png"
                 alt="Traditional Dress of Kumbhan"
               />
             </div>
@@ -104,7 +104,7 @@
             </div>
             <div class="image">
               <img
-                src="styles/images/food.png"
+                src="public/images/food.png"
                 alt="Traditional Food of Kumbhan"
               />
             </div>
@@ -136,7 +136,7 @@
             </div>
             <div class="image">
               <img
-                src="styles/images/folk.png"
+                src="public/images/folk.png"
                 alt="Women performing Garba during a cultural night in Kumbhan"
               />
             </div>
@@ -172,7 +172,7 @@
             </div>
             <div class="image">
               <img
-                src="styles/images/social.png"
+                src="public/images/social.png"
                 alt="Villagers sharing a meal during a traditional ceremony"
               />
             </div>
@@ -205,7 +205,7 @@
             </div>
             <div class="image">
               <img
-                src="styles/images/lang.png"
+                src="public/images/lang.png"
                 alt="Villagers using local expressions in conversation"
               />
             </div>
@@ -243,7 +243,7 @@
             </div>
             <div class="image">
               <img
-                src="styles/images/worship.png"
+                src="public/images/worship.png"
                 alt="A woman lighting a diya in front of a tulsi plant in Kumbhan"
               />
             </div>
