file name change

--- a/Economy.html
+++ b/Economy.html
@@ -23,7 +23,7 @@
           <a href="temples.html">Temples</a>
           <a href="festivals.html">Festivals</a>
           <a href="education.html">Education</a>
-          <a href="healthcare.html">Healthcare</a>
+          <a href="Healthcare.html">Healthcare</a>
           <a href="economy.html" class="active">Economy</a>
         </div>
       </nav>
