--- a/culture.html
+++ b/culture.html
@@ -25,7 +25,7 @@
           <a href="temples.html">Temples</a>
           <a href="festivals.html">Festivals</a>
           <a href="education.html">Education</a>
-          <a href="healthcare.html">Healthcare</a>
+          <a href="Healthcare.html">Healthcare</a>
           <a href="Economy.html">Economy</a>
         </div>
       </nav>
