--- a/education.html
+++ b/education.html
@@ -20,7 +20,7 @@
           <a href="temples.html">Temples</a>
           <a href="festivals.html">Festivals</a>
           <a href="education.html" class="active">Education</a>
-          <a href="healthcare.html">Healthcare</a>
+          <a href="Healthcare.html">Healthcare</a>
           <a href="Economy.html">Economy</a>
         </div>
       </nav>
