--- a/festivals.html
+++ b/festivals.html
@@ -28,7 +28,7 @@
           <a href="temples.html">Temples</a>
           <a href="festivals.html" class="active">Festivals</a>
           <a href="education.html">Education</a>
-          <a href="healthcare.html">Healthcare</a>
+          <a href="Healthcare.html">Healthcare</a>
           <a href="Economy.html">Economy</a>
         </div>
 
