file name change

--- a/Healthcare.html
+++ b/Healthcare.html
@@ -20,7 +20,7 @@
           <a href="temples.html">Temples</a>
           <a href="festivals.html">Festivals</a>
           <a href="education.html">Education</a>
-          <a href="healthcare.html" class="active">Healthcare</a>
+          <a href="Healthcare.html" class="active">Healthcare</a>
           <a href="Economy.html">Economy</a>
         </div>
       </nav>
