--- a/festivals.html
+++ b/festivals.html
@@ -40,7 +40,18 @@
     </header>
 
     <!-- ========= Hero Banner ========= -->
-    <section class="hero" id="top">
+    <section
+      class="hero"
+      id="top"
+      style="
+        background-image: url('public/images/mixs.png');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        height: 100vh;
+        /* color: white; */
+      "
+    >
       <div class="container">
         <h1>Festivals of Kumbhan Village</h1>
         <p>Experience a colourful blend of devotion, tradition, and unity.</p>
