--- a/index.html
+++ b/index.html
@@ -32,7 +32,20 @@
     </header>
 
     <!-- =============== HERO ============== -->
-    <section class="hero">
+    <section
+      class="hero"
+      style="
+        background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)),
+          url('public/images/bhavani.jpg') center/cover no-repeat;
+        height: 50vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        color: white;
+        padding: 2rem;
+      "
+    >
       <div class="hero-inner container">
         <h1>Welcome to Kumbhan</h1>
         <p>
@@ -41,13 +54,6 @@
         </p>
         <a href="#about" class="cta-btn">Explore More</a>
       </div>
-
-      <!-- bouncing arrow -->
-      <a
-        href="#about"
-        class="scroll-down"
-        aria-label="Scroll to About section"
-      ></a>
     </section>
 
     <!-- =============== ABOUT (full content) ============== -->
