--- a/festivals.html
+++ b/festivals.html
@@ -48,8 +48,8 @@
         background-size: cover;
         background-position: center;
         background-repeat: no-repeat;
-        height: 100vh;
-        /* color: white; */
+        height: 50vh;
+        color: True black;
       "
     >
       <div class="container">
